--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -284,7 +284,7 @@
          This needs to match the constants in
          policy/src/com/android/internal/policy/impl/PhoneWindowManager.java
     -->
-    <integer name="config_longPressOnHomeBehavior">3</integer>
+    <integer name="config_longPressOnHomeBehavior">1</integer>
 
     <!-- Control the behavior when the user long presses the app switch button.
             0 - Nothing
@@ -297,6 +297,9 @@
          services/core/java/com/android/server/policy/policy/impl/PhoneWindowManager.java
 
     <integer name="config_longPressOnAppSwitchBehavior">1</integer-->
+
+    <!-- Bool whether to show Hardware keys settings in CustomSquash -->
+    <bool name="config_showHwKeys">true</bool>
 
     <!-- Maximum number of supported users -->
     <integer name="config_multiuserMaximumUsers">4</integer>
