--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -104,17 +104,17 @@
     <integer name="config_defaultNotificationLedOff">2000</integer>
 
     <!-- Is the notification LED intrusive? Used to decide if there should be a disable option -->
-    <bool name="config_intrusiveNotificationLed">true</bool>
+    <!--bool name="config_intrusiveNotificationLed">true</bool-->
 
     <!-- Does the notification LED support multiple colors?
          Used to decide if the user can change the colors -->
-    <bool name="config_multiColorNotificationLed">true</bool>
+     <!--bool name="config_multiColorNotificationLed">true</bool-->
 
     <!-- Is the battery LED intrusive? Used to decide if there should be a disable option -->
-    <bool name="config_intrusiveBatteryLed">true</bool>
+   <!--bool name="config_intrusiveBatteryLed">true</bool-->
 
     <!-- Does the battery LED support multiple colors? Used to decide if the user can change the colors -->
-    <bool name="config_multiColorBatteryLed">true</bool>
+     <!--bool name="config_multiColorBatteryLed">true</bool-->
 
     <!-- Default color for notification LED is white. -->
     <color name="config_defaultNotificationColor">#ffffffff</color>
@@ -258,7 +258,8 @@
             64 - Volume rocker
          For example, a device with Home, Back and Menu keys would set this
          config to 7. -->
-    <integer name="config_deviceHardwareKeys">83</integer>
+    <!--integer name="config_deviceHardwareKeys">83</integer-->
+  
 
     <!-- Hardware keys present on the device with the ability to wake, stored as a bit field.
          This integer should equal the sum of the corresponding value for each
@@ -272,7 +273,7 @@
             64 - Volume rocker
          For example, a device with Home, Back and Menu keys would set this
          config to 7.
-    <integer name="config_deviceHardwareWakeKeys">64</integer-->
+    <!--integer name="config_deviceHardwareKeys">83</integer-->
 
     <!-- Control the behavior when the user long presses the home button.
             0 - Nothing
@@ -296,7 +297,7 @@
          This needs to match the constants in
          services/core/java/com/android/server/policy/policy/impl/PhoneWindowManager.java
 
-    <integer name="config_longPressOnAppSwitchBehavior">1</integer-->
+    <!--integer name="config_longPressOnAppSwitchBehavior">1</integer-->
 
     <!-- Maximum number of supported users -->
     <integer name="config_multiuserMaximumUsers">4</integer>
